# docker_build

./: .clang-format  .cmake-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  README.md  docker.md  docker_build.sh  main.cpp
.github/workflows/: docker-image.yml
